--- a/Terra.Sdk.TestClient/Terra.Sdk.TestClient.csproj
+++ b/Terra.Sdk.TestClient/Terra.Sdk.TestClient.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Terra.Sdk.Lcd\Terra.Sdk.Lcd.csproj" />
+    </ItemGroup>
+
 </Project>
