--- a/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
+++ b/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="JsonSubTypes" Version="1.8.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
