--- a/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
+++ b/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
@@ -5,12 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CardanoBech32" Version="0.9.1" />
       <PackageReference Include="JsonSubTypes" Version="1.8.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Models\Signing" />
     </ItemGroup>
 
 </Project>
