--- a/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
+++ b/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="dotnetstandard-bip32" Version="1.0.0" />
         <PackageReference Include="dotnetstandard-bip39" Version="1.0.2" />
         <PackageReference Include="JsonSubTypes" Version="1.8.0" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="Nethereum.Signer" Version="4.2.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="protobuf-net" Version="3.0.101" />
