--- a/Terra.BigQuery.Etl/Terra.BigQuery.Etl.csproj
+++ b/Terra.BigQuery.Etl/Terra.BigQuery.Etl.csproj
@@ -9,9 +9,11 @@
 
     <ItemGroup>
       <PackageReference Include="Google.Cloud.BigQuery.V2" Version="2.4.0-beta01" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0-1.final" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Terra.BigQuery.Roslyn\Terra.BigQuery.Roslyn.csproj" />
       <ProjectReference Include="..\Terra.Sdk.Lcd\Terra.Sdk.Lcd.csproj" />
     </ItemGroup>
 
