--- a/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
+++ b/Terra.Sdk.Lcd/Terra.Sdk.Lcd.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="CardanoBech32" Version="0.9.1" />
         <PackageReference Include="dotnetstandard-bip32" Version="1.0.0" />
         <PackageReference Include="dotnetstandard-bip39" Version="1.0.2" />
+        <PackageReference Include="Ecc" Version="1.0.5" />
         <PackageReference Include="JsonSubTypes" Version="1.8.0" />
         <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
         <PackageReference Include="Nethereum.Signer" Version="4.2.0" />
